--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,13 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    externalNativeBuild {
+        // Encapsulates your CMake build configurations.
+        cmake {
+            // Provides a relative path to your CMake build script.
+            path "CMakeLists.txt"
+        }
+    }
 }
 
 dependencies {
